--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,37 +1,38 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
 
-    <string name="app_name">My Little Business</string>
+    <string name="app_name">My little business</string>
     <string name="title_activity_product_list">Products</string>
-    <string name="action_add_product">New Product</string>
+    <string name="action_add_product">New product</string>
     <string name="action_settings">Settings</string>
-    <string name="title_activity_add_product">Add Product</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_add_product">Add product</string>
     <string name="products">Products</string>
-    <string name="product_info">Product Info</string>
-    <string name="name_lable">Name</string>
-    <string name="stock_lable">"Stock: "</string>
-    <string name="add_item_lable">Add items:</string>
+    <string name="product_info">Product info</string>
+    <string name="name_label">Name</string>
+    <string name="stock_label">Stock:</string>
+    <string name="add_item_label">Add items:</string>
     <string name="save">Save</string>
     <string name="sell_item_btt">Sell</string>
     <string name="sold_item_lable">Sold items:</string>
-    <string name="error_product_exist">Product Name already exist</string>
-    <string name="error_name_empty">The name field can not be empty</string>
-    <string name="delete_item">Delete Item</string>
-    <string name="edit_item">Edit Item</string>
-    <string name="new_item">New Item</string>
+    <string name="error_product_exist">Product name already exist</string>
+    <string name="error_name_empty">Name field can not be empty</string>
+    <string name="delete_item">Delete item</string>
+    <string name="edit_item">Edit item</string>
+    <string name="new_item">New item</string>
     <string name="preferences">Preferences</string>
-    <string name="loading">Loading...</string>
+    <string name="loading">Loading&#8230;</string>
     <string name="error_there_are_not_enough">There are not enough stock.</string>
     <string name="error_stock_out_of_bounds">Sorry, the stock goes out of bounds.</string>
-    <string name="error_invalid_stock_or_too_large">Sorry, the stock is not valid entry or is to large</string>
-    <string name="by_sales">By Sales</string>
-    <string name="by_benefits">By Benefits</string>
+    <string name="error_invalid_stock_or_too_large">Sorry, the stock is not valid entry or is too large</string>
+    <string name="by_sales">By sales</string>
+    <string name="by_benefits">By benefits</string>
     <string name="sort">Sort</string>
-    <string name="cost_lable">Cost:</string>
-    <string name="price_lable">Price:</string>
-    <string name="error_invalid_cost">Sorry, the cost is not valid entry</string>
-    <string name="error_invalid_price">Sorry, the price is not valid entry</string>
+    <string name="cost_label">Cost:</string>
+    <string name="price_label">Price:</string>
+    <string name="error_invalid_cost">Sorry, the cost is not valid</string>
+    <string name="error_invalid_price">Sorry, the price is not valid</string>
     <string name="add_btt">Add</string>
+    <string name="add_new_image_descript">Add new image&#8230;</string>
+    <string name="product_image_descrip">Product image</string>
 
 </resources>
