Implemented PoC ProductDetailsActivity

--- a/TODO
+++ b/TODO
@@ -1,5 +1,7 @@
 * Actividad/Fragment detalle/actualización de producto (basado en diseño anterior).
-	+ DOING @rsrdesarrollo.
+	+ DOING.
+	+ Warnings.
+	+ Implementar funcionalidad botones.
 	
 * Adaptar los layouts.
 	+ Imágenes del mismo tamaño (incluso cuando no hay imagen).
