--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,6 +15,7 @@
     <string name="sell_item_btt">Sell</string>
     <string name="sell_item_label">Sell items:</string>
     <string name="error_product_exist">Product name already exist</string>
+    <string name="error_product_data">Error in product data</string>
     <string name="error_name_empty">Name field can not be empty</string>
     <string name="delete_item">Delete item</string>
     <string name="edit_item">Edit item</string>
