--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -6,7 +6,6 @@
     <string name="action_add_product">New product</string>
     <string name="action_settings">Settings</string>
     <string name="title_activity_add_product">Add product</string>
-    <string name="products">Products</string>
     <string name="product_info">Product info</string>
     <string name="name_label">Name</string>
     <string name="stock_label">Stock:</string>
@@ -37,6 +36,7 @@
     <string name="product_image_descrip">Product image</string>
     <string name="empty_list">Empty list</string>
     <string name="title_activity_product_details">Product details</string>
-    <string name="hello_world">Hello world!</string>
+    <string name="defaul_add_sell_value">1</string>
+    <string name="image_product_content_description">Product image</string>
 
 </resources>
