--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -42,5 +42,7 @@
     <string name="action_about">About</string>
     <string name="action_stats">Stats</string>
     <string name="benefits_hint">Benefits</string>
+    <string name="title_activity_about_mlb">AboutMLB</string>
+    <string name="hello_world">Hello world!</string>
 
 </resources>
