--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -39,10 +39,22 @@
     <string name="action_about">About</string>
     <string name="action_stats">Stats</string>
     <string name="benefits_hint">Benefits</string>
-    <string name="title_activity_about_mlb">AboutMLB</string>
+    <string name="title_activity_about_mlb">About MLB</string>
     <string name="hello_world">Hello world!</string>
     <string name="close">Close</string>
     <string name="close_without_save">Close without saving?</string>
     <string name="title_activity_stats">Stadistics</string>
+    
+    <string name="title_activity_settings">Settings</string>
+
+    <string-array name="pref_sort_by_list">
+        <item>Name</item>
+        <item>Benefits</item>
+        <item>Sales</item>
+    </string-array>
+    
+    <string name="pref_sort_by">Sort list of products</string>
+    
+    <string name="sort_by">Sort by</string>
 
 </resources>
