New confirm dialog in AddProductActivity + ProductListActivity menu updated + TODO updated (@rsrdesarrollo @jgsojo)

--- a/TODO
+++ b/TODO
@@ -1,4 +1,11 @@
-* Dialog preguntando si quiere salir sin guardar en añadir producto.
+* Cambiar el Dialog al salir de AddProductActivity para que solo se muestre
+  si el producto a añadir ha tenido algún cambio.
+
+* Cambiar el Dialog al salir de ProductDetailsActivity para que solo se muestre
+  si el producto a editar ha tenido algún cambio.
+  
+ * Actividad/Dialog de settings.
+	+ (Opcional) Importar/exportar a CSV (mediante share).
 
 DOING:
 * Actividad de estadísticas.
@@ -10,6 +17,3 @@ DOING:
 	+ Probar distintas configuraciones de pantalla.
 	
 * Actividad/Dialog de settings.
-	+ (Opcional) Almacenamiento persistente con SetPreferences.
-		- Cambios en MLBApplication.
-	+ Importar/exportar a CSV (mediante share).
