--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -57,11 +57,19 @@
         <item>Benefits</item>
         <item>Sales</item>
     </string-array>
+    
+    <string-array name="pref_top_size_list">
+        <item>5</item>
+        <item>10</item>
+        <item>15</item>
+        <item>20</item>
+    </string-array>
+    
 
     <string name="pref_sort_by">Sort list of products</string>
     <string name="sort_by">Sort by</string>
     
-    <string name="title_activity_top_stats">Top 10</string>
+    
     <string name="title_top_benefits_section">Top benefits</string>
     <string name="title_top_sales_section">Top sales</string>
 
