--- a/res/values-es/strings.xml
+++ b/res/values-es/strings.xml
@@ -54,9 +54,13 @@
     </string-array>
     
     <string name="pref_sort_by">Ordenar lista de productos</string>
+    <string name="pref_sort_by_summary">Campo de ordenación de la lista de productos</string>
     
     <string name="sort_by">Ordenar por</string>
 
+    <string name="pref_top_list_length">Longitud lista TOP</string>
+    
     <string name="title_top_benefits_section">Top beneficios</string>
     <string name="title_top_sales_section">Top ventas</string>
+     <string name="pref_top_list_length_summary">Longitud de la lista de TOPs en las estadísticas</string>
 </resources>
